<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidpnClient</string>
    <string name="hello">Hello Android, DemoAppActivity!</string>
    <string name="settings">Settings</string>
    <!-- 开始界面 -->
    <string name="login_text">登陆</string>
    <string name="register_text">注册</string>
    <!--  -->
    <string name="login_confirm">登陆</string>
    <string name="login_name_hint">请输入名字</string>
    <!-- 注册 -->
    <string name="register_return">返回</string>
    <string name="register_next">下一步</string>
    <string name="register_boy">男</string>
    <string name="register_girl">女</string>
    <string name="register_finish">完成</string>
    <string name="register_name_hint">用户名请输入1-10位字母或数字</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_passwordfirmcon_hint">请再次输入密码</string>
    <string name="register_age_hint">年龄</string>
    <string name="register_email_hint">邮箱</string>
    <string name="register_warnning_first">邮箱</string>
    <!-- frament -->
    <string name="contact">联系人</string>
    <string name="recent">最近</string>
    <string name="discovery">发现</string>
    <string name="myinformation">我的</string>
     <!-- 搜索 -->
     <string name="search">搜索</string>
     <string name="cancel">取消</string>
     <string name="sort_no_result">哎呀，没有这个好友哦！</string>
     <!--游戏-->
     <string name="game_clue_man">加油，男神就在前方</string>
     <string name="game_clue_woman">加油，妹子 就在前方</string>
     <string name="game_restart">可恶，我要再来一次</string>
     <string name="game_cancel">呜，程序员我要诅咒你</string>
     <string name="action_settings">设置</string>
     <!-- 会话 -->
      <string name="copy">复制</string>
      <string name="delete">删除</string>
      <string name="recent_empty">没有任何最近会话哦！</string>
</resources>
