<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   

        <TextView
            android:id="@+id/game_clue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_clue_woman"
            android:textSize="23sp"
            android:gravity="center"
         />

       <FrameLayout
        android:id="@+id/gameContainer"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.zgrujb.selfdefindui.GameView
            android:id="@+id/gameView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </com.zgrujb.selfdefindui.GameView>

        <com.zgrujb.selfdefindui.AnimLayer
            android:id="@+id/animLayer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </com.zgrujb.selfdefindui.AnimLayer>
    </FrameLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
     <Button
        android:id="@+id/btnNewGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="23sp"
        android:text="@string/game_restart" />
        <Button
        android:id="@+id/btnCancelGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="23sp"
        android:text="@string/game_cancel" />
      </LinearLayout>
</LinearLayout>
